# Flashino

./: .gitignore  AGENTS.md  LICENSE  README.md  check_buildconfig.sh  firestore.indexes.json  firestore.rules  gradle.properties  local.properties.template  pyproject.toml  remoteconfig.template.json  settings.gradle.kts  verify_app_setup.sh
.github/workflows/: android-ci.yml  deploy-hf-space.yml  release.yml
app/: build.gradle.kts  multidex-config.pro  multidex-config.txt  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/debug/res/xml/: network_security_config.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_answer.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_foreground_inset.xml  ic_notification.xml  ic_splash_mark.xml  ic_study.xml  native_ad_badge_bg.xml
app/src/main/res/layout/: view_native_ad.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/raw/: lottie_flashcards.json  lottie_qa.json  lottie_study.json
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
docs/: BUILD_APK.md  CONFIG_ENVIRONMENTS.md
docs/supabase/: 01_schema.sql  02_runtime_patch.sql  README.md
gradle/: libs.versions.toml
scripts/: bump_android_version.py  check_env.ps1  switch_config.ps1  test_firestore_rules.mjs  validate_config_security.py  verify_release_signature.sh
server/hf_audio_service/: Dockerfile  README.md  app.py  requirements.txt  warmup.py
store_assets/amazon/: ASSET_MANIFEST.txt
(+131 files in other folders)
